--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "Mockup for personal portfolio website",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "devserver": "browser-sync --server --files \"**/*\"",
-    "dev": "npm-run-all --parallel devserver watch:sass"
+    "dev": "node-sass sass/main.scss css/style.css -w"
   },
   "author": "sdbowen",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.3",
-    "node-sass": "^4.11.0",
-    "npm-run-all": "^4.1.5"
+    "node-sass": "^4.11.0"
   }
 }
